headscale/service-headscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  labels:
    app: headscale
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http
    name: http
  selector:
    app: headscale
  type: ClusterIP
